Glowing checkboxes added to Dark Mode Page - styling issue identified

--- a/src/pages/DarkModePage/DarkModePage.scss
+++ b/src/pages/DarkModePage/DarkModePage.scss
@@ -2,20 +2,18 @@
   background-color: #031321;
   transition:.2s ease-in-out;
   color: #fff;
-  height: 100vh;
   transition:.2s ease-in-out;
 }
 
 #dark-mode-page {
-  height: 100vh;
   transition:.2s ease-in-out;
-  bottom: 0;
 }
 
 .dark-mode-container {
   display: grid;
   gap: 5rem;
   margin: 4rem 0;
+  // height:58vh;
 }
 
 @media (min-width: 600px) {
@@ -122,113 +120,199 @@
   }
 }
 
-.dark-mode-feature {
-  &-1 {
-    .button {
-      padding: 15px 30px;
-      border: none;
-      background: transparent;
-      color: #2196f3;
-      text-transform: uppercase;
-      letter-spacing: 4px;
-      font-size: 24px;
-      overflow: hidden;
-      transition: 0.2s;
+.dark-mode {
+  &-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    // margin-top: 2rem;
+  }
 
-      &:hover {
-        cursor: pointer;
-        color: #255784;
-        background-color: #2196f3;
-        box-shadow: 0 0 10px #2196f3, 0 0 40px #2196f3, 0 0 80px #2196f3;
-        transition-delay: 0.5s;
+  &-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+
+    &:nth-child(1) {
+      margin-bottom: 1rem;
+    }
+  }
+
+  &-feature {
+    &-1 {
+      .button {
+        padding: 15px 30px;
+        border: none;
+        background: transparent;
+        color: #2196f3;
+        text-transform: uppercase;
+        letter-spacing: 4px;
+        font-size: 24px;
+        overflow: hidden;
+        transition: 0.2s;
+  
+        &:hover {
+          cursor: pointer;
+          color: #255784;
+          background-color: #2196f3;
+          box-shadow: 0 0 10px #2196f3, 0 0 40px #2196f3, 0 0 80px #2196f3;
+          transition-delay: 0.5s;
+        }
+      }
+    }
+    &-2 {
+      .button {
+        padding: 15px 30px;
+        border: none;
+        background: transparent;
+        color: #3af321;
+        text-transform: uppercase;
+        letter-spacing: 4px;
+        font-size: 24px;
+        overflow: hidden;
+        transition: 0.2s;
+        position: relative;
+        display: inline-block;
+  
+        span {
+          position: absolute;
+          display: block;
+  
+          &:nth-child(1) {
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 2px;
+            background: linear-gradient(90deg, transparent, #3af321);
+          }
+  
+          &:nth-child(2) {
+            top: -100%;
+            right: 0;
+            width: 2px;
+            height: 100%;
+            background: linear-gradient(180deg, transparent, #3af321);
+          }
+  
+          &:nth-child(3) {
+            bottom: 0;
+            right: -100%;
+            width: 100%;
+            height: 2px;
+            background: linear-gradient(270deg, transparent, #3af321);
+          }
+  
+          &:nth-child(4) {
+            bottom: -100%;
+            left: 0;
+            width: 2px;
+            height: 100%;
+            background: linear-gradient(360deg, transparent, #3af321);
+          }
+        }
+  
+        &:hover {
+          cursor: pointer;
+          color: #255784;
+          background-color: #3af321;
+          box-shadow: 0 0 10px #3af321, 0 0 40px #3af321, 0 0 80px #3af321;
+          transition-delay: 1s;
+  
+          span {
+            &:nth-child(1) {
+              left: 100%;
+              transition: 1s;
+            }
+  
+            &:nth-child(2) {
+              top: 100%;
+              transition: 1s;
+              transition-delay: 0.25s;
+            }
+  
+            &:nth-child(3) {
+              right: 100%;
+              transition: 1s;
+              transition-delay: 0.5s;
+            }
+  
+            &:nth-child(4) {
+              bottom: 100%;
+              transition: 1s;
+              transition-delay: 0.8s;
+            }
+          }
+        }
+  
+        
       }
     }
   }
-  &-2 {
-    .button {
-      padding: 15px 30px;
-      border: none;
-      background: transparent;
-      color: #3af321;
-      text-transform: uppercase;
-      letter-spacing: 4px;
-      font-size: 24px;
-      overflow: hidden;
-      transition: 0.2s;
+}
+
+.glowing-checkbox {
+  position: relative;
+  display: flex;
+
+  li {
+    list-style: none;
+
+    > label {
       position: relative;
-      display: inline-block;
 
-      span {
+      > input[type="checkbox"] {
         position: absolute;
-        display: block;
-
-        &:nth-child(1) {
-          top: 0;
-          left: -100%;
-          width: 100%;
-          height: 2px;
-          background: linear-gradient(90deg, transparent, #3af321);
-        }
-
-        &:nth-child(2) {
-          top: -100%;
-          right: 0;
-          width: 2px;
-          height: 100%;
-          background: linear-gradient(180deg, transparent, #3af321);
-        }
-
-        &:nth-child(3) {
-          bottom: 0;
-          right: -100%;
-          width: 100%;
-          height: 2px;
-          background: linear-gradient(270deg, transparent, #3af321);
-        }
-
-        &:nth-child(4) {
-          bottom: -100%;
-          left: 0;
-          width: 2px;
-          height: 100%;
-          background: linear-gradient(360deg, transparent, #3af321);
-        }
-      }
-
-      &:hover {
+        opacity: 0;
         cursor: pointer;
-        color: #255784;
-        background-color: #3af321;
-        box-shadow: 0 0 10px #3af321, 0 0 40px #3af321, 0 0 80px #3af321;
-        transition-delay: 1s;
 
-        span {
-          &:nth-child(1) {
-            left: 100%;
-            transition: 1s;
-          }
+        &:checked ~ .icon {
+          box-shadow: inset 0px 0px 2px rgba(255,255,255,0.05), inset 4px 4px 6px rgba(0,0,0,0.2);
 
-          &:nth-child(2) {
-            top: 100%;
-            transition: 1s;
-            transition-delay: 0.25s;
-          }
-
-          &:nth-child(3) {
-            right: 100%;
-            transition: 1s;
-            transition-delay: 0.5s;
-          }
-
-          &:nth-child(4) {
-            bottom: 100%;
-            transition: 1s;
-            transition-delay: 0.8s;
+          .fa {
+            color: #00f3ff;
+            text-shadow: 0 0 15px #00f3ff, 0 0 25px #00f3ff;
+            animation: animate 5s linear infinite;
           }
         }
       }
 
-      
+      .icon {
+        position: relative;
+        width: 60px;
+        height: 60px;
+        background: #031321;
+        color: #555;
+        font-size: 24px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        margin: 0 1.5rem;
+        overflow: hidden;
+        box-shadow: -1px -1px 4px rgba(255,255,255,0.05), 
+          4px 4px 6px rgba(0,0,0,0.2), inset -1px -1px 4px rgba(255,255,255,0.05), inset 1px 1px 1px rgba(0,0,0,0.1);
+
+        &:before {
+          content: '';
+          position: absolute;
+          top: 2px;
+          left: 2px;
+          width: calc(100% - 5px);
+          height: calc(50% - 2px);
+          border-top-left-radius: 8px;
+          border-top-right-radius: 8px;
+          background: rgba(255,255,255,0.05);
+        }
+      }
     }
+  }
+}
+
+@keyframes animate {
+  0% {
+    filter: hue-rotate(0deg);
+  }
+  100% {
+    filter: hue-rotate(360deg);
   }
 }
